# Parser

./: README.md  data_parser.py  pyproject.toml  test_data_parser.py
