[tool.poetry]
name = "tests-for-work"
version = "0.1.0"
description = ""
authors = ["remmover <77463027+remmover@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tests_for_work"}]

[tool.poetry.dependencies]
python = "3.11.3"
requests = "2.31.0"
beautifulsoup4 = "4.12.2"
pandas = "^2.1.2"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
httpx = "0.24.1"
aiosqlite = "0.19.0"
pytest-asyncio = "0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
